@@ -519,6 +519,10 @@ public class GoogleHadoopFileSystemConfiguration {
               "fs.gs.inputstream.min.range.request.size",
               GoogleCloudStorageReadOptions.DEFAULT_MIN_RANGE_REQUEST_SIZE);
 
+  /** Override configuration file path. This file must have be a valid Hadoop configuration file. */
+  public static final GoogleHadoopFileSystemConfigurationProperty<String> GCS_CONFIG_OVERRIDE_FILE =
+      new GoogleHadoopFileSystemConfigurationProperty<>("fs.gs.config.override.file", null);
+
   @VisibleForTesting
   static GoogleCloudStorageFileSystemOptions.Builder getGcsFsOptionsBuilder(Configuration config) {
     GoogleCloudStorageFileSystemOptions.Builder gcsFsOptionsBuilder =
